# Qrgen

./: CMakeLists.txt  README.md  main.cpp  二维码从入门到再入门.html  二维码从入门到再入门.md
qrgen/: Alpha.cpp  Alpha.h  BitBlock.cpp  BitBlock.h  Bits.cpp  Bits.h  CMakeLists.txt  CodeWord.h  EncodeInterface.h  GFObject.h  Generator.cpp  Generator.h  GenericGF.cpp  GenericGF.h  GenericGFPoly.cpp  GenericGFPoly.h  Level.h  Mask.h  Number.cpp  Number.h  Pixel.cpp  Pixel.h  PixelInfo.h  PixelOrder.h  PixelProperty.h  Plan.cpp  Plan.h  Property.h  QRCode.h  Qrcoder.cpp  Qrcoder.h  RSUtil.cpp  RSUtil.h  Raw.cpp  Raw.h  Reed_Solomon_encoder.cpp  Reed_Solomon_encoder.h  Version.cpp  Version.h
