add_library( qrgen
Alpha.h
Bits.h
BitBlock.h
Encodeinterface.h
Generator.h
GenericGF.h
GenericGFPoly.h
Level.h
Mask.h
Number.h
Pixel.h
Plan.h
Property.h
QRCode.h
Raw.h
Reed_Solomon_encoder.h

RSUtil.h
Version.h
Alpha.cpp
BitBlock.cpp
Bits.cpp
Generator.cpp
Number.cpp
Pixel.cpp
Plan.cpp
Raw.cpp
Reed_Solomon_encoder.cpp
RSUtil.cpp
Version.cpp
)
