add_library( qrgen
Alpha.h
Bits.h
BitBlock.h
CodeWord.h
Encodeinterface.h
GenericGF.h
GenericGFPoly.h
Level.h
Mask.h
Number.h
Pixel.h
PixelInfo.h
PixelOrder.h
Plan.h
Property.h
QRCode.h
Qrcoder.h
Raw.h
Reed_Solomon_encoder.h

RSUtil.h
Version.h
Alpha.cpp
BitBlock.cpp
Bits.cpp
GenericGF.cpp
GenericGFPoly.cpp
Number.cpp
Pixel.cpp
Plan.cpp
Qrcoder.cpp
Raw.cpp
Reed_Solomon_encoder.cpp
RSUtil.cpp
Version.cpp
)
